--- a/index.html
+++ b/index.html
@@ -105,29 +105,37 @@
     </section>
     <!--Our team-->
     <!--section4-->
-    <section id="our-team">
+    <section id="team-members-section">
       <div class="container">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
+        <h2>Our Team</h2>
+        <ul class="team-members-list">
           <li>
-            <img src="./images/teammemb2.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <div class="member">
+              <img src="./images/teammemb2.jpg" alt="Mark Guerrero" width="264" />
+              <h3 class="member-name">Mark Guerrero</h3>
+              <p class="member-job">Product Designer</p>
+            </div>
           </li>
           <li>
-            <img src="./images/teammemb1.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <div class="member">
+              <img src="./images/teammemb1.jpg" alt="Tom Ford" width="264" />
+              <h3 class="member-name">Tom Ford</h3>
+              <p class="member-job">Frontend Developer</p>
+            </div>
           </li>
           <li>
-            <img src="./images/teammemb.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <div class="member">
+              <img src="./images/teammemb.jpg" alt="Camila Garcia" width="264" />
+              <h3 class="member-name">Camila Garcia</h3>
+              <p class="member-job">Marketing</p>
+            </div>
           </li>
           <li>
-            <img src="./images/teammeb3.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <div class="member">
+              <img src="./images/teammeb3.jpg" alt="Daniel Wilson" width="264" />
+              <h3 class="member-name">Daniel Wilson</h3>
+              <p class="member-job">UI Designer</p>
+            </div>
           </li>
         </ul>
       </div>
