--- a/portfolio.html
+++ b/portfolio.html
@@ -59,51 +59,81 @@
       <div class="container">
         <h2 class="visually-hidden">Work Examples</h2>
         <ul class="work-examples">
-          <li> <a>
-              <img src="./images/apps.jpg" alt="Banking App Interface Concept" width="360" />
-              <h3>Banking App Interface Concept</h3>
-              <p>App</p>
-            </a> </li>
-          <li> <a>
-              <img src="./images/marketing.jpg" alt="Cashless Payment" width="360" />
-              <h3>Cashless Payment</h3>
-              <p>Marketing</p>
-            </a> </li>
-          <li> <a>
-              <img src="./images/meditation.jpg" alt="Meditation App" width="360" />
-              <h3>Meditaion App</h3>
-              <p>App</p>
-            </a> </li>
-          <li> <a>
-              <img src="./images/taxiservice.jpg" alt="Taxi Service" width="360" />
-              <h3>Taxi Service</h3>
-              <p>Marketing</p>
-            </a> </li>
-          <li> <a>
-              <img src="./images/screenil.jpg" alt="Screen Illustrations" width="360" />
-              <h3>Screen Illustrations</h3>
-              <p>Design</p>
-            </a> </li>
-          <li> <a>
-              <img src="./images/onlinecourses.jpg" alt="Online Courses" width="360" />
-              <h3>Online Courses</h3>
-              <p>Marketing</p>
-            </a> </li>
-          <li> <a>
-              <img src="./images/instagram.jpg" alt="Instagram Stories Concept" width="360" />
-              <h3>Instagram Stories Concept</h3>
-              <p>Design</p>
-            </a> </li>
-          <li> <a>
-              <img src="./images/organicfood.jpg" alt="Organic Food" width="360" />
-              <h3>Organic Food</h3>
-              <p>Web Site</p>
-            </a> </li>
-          <li> <a>
-              <img src="./images/freshcoffee.jpg" alt="Fresh Coffee" width="360" />
-              <h3>Fresh Coffee</h3>
-              <p>Web Site</p>
-            </a> </li>
+          <li>
+            <div class="work-item"><a>
+                <img src="./images/apps.jpg" alt="Banking App Interface Concept" width="360" />
+                <h3 class="work-item-title">Banking App Interface Concept</h3>
+                <p class="work-item-sphere">App</p>
+              </a>
+            </div>
+          </li>
+          <li>
+            <div class="work-item"><a>
+                <img src="./images/marketing.jpg" alt="Cashless Payment" width="360" />
+                <h3 class="work-item-title">Cashless Payment</h3>
+                <p class="work-item-sphere">Marketing</p>
+              </a>
+            </div>
+          </li>
+          <li>
+            <div class="work-item"> <a>
+                <img src="./images/meditation.jpg" alt="Meditation App" width="360" />
+                <h3 class="work-item-title">Meditaion App</h3>
+                <p class="work-item-sphere">App</p>
+              </a>
+            </div>
+          </li>
+          <li>
+            <div class="work-item"> <a>
+                <img src="./images/taxiservice.jpg" alt="Taxi Service" width="360" />
+                <h3 class="work-item-title">Taxi Service</h3>
+                <p class="work-item-sphere">Marketing</p>
+              </a>
+            </div>
+          </li>
+          <li>
+            <div class="work-item"><a>
+                <img src="./images/screenil.jpg" alt="Screen Illustrations" width="360" />
+                <h3 class="work-item-title">Screen Illustrations</h3>
+                <p class="work-item-sphere">Design</p>
+              </a>
+            </div>
+          </li>
+          <li>
+            <div class="work-item">
+              <a>
+                <img src="./images/onlinecourses.jpg" alt="Online Courses" width="360" />
+                <h3 class="work-item-title">Online Courses</h3>
+                <p class="work-item-sphere">
+
+
+            </div>Marketing</p>
+            </a>
+          </li>
+          <li>
+            <div class="work-item"><a>
+                <img src="./images/instagram.jpg" alt="Instagram Stories Concept" width="360" />
+                <h3 class="work-item-title">Instagram Stories Concept</h3>
+                <p class="work-item-sphere">Design</p>
+              </a>
+            </div>
+          </li>
+          <li>
+            <div class="work-item"> <a>
+                <img src="./images/organicfood.jpg" alt="Organic Food" width="360" />
+                <h3 class="work-item-title">Organic Food</h3>
+                <p class="work-item-sphere">Web Site</p>
+              </a>
+            </div>
+          </li>
+          <li>
+            <div class="work-item"><a>
+                <img src="./images/freshcoffee.jpg" alt="Fresh Coffee" width="360" />
+                <h3 class="work-item-title">Fresh Coffee</h3>
+                <p class="work-item-sphere">Web Site</p>
+              </a>
+            </div>
+          </li>
         </ul>
       </div>
     </section>
