--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
   <title>WebStudio</title>
   <link type="text/css" rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link type="text/css" rel="stylesheet" href="./css/styles.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
 </head>
 
 <body>
   <!--Top line-->
   <header>
-    <div class="container">
+    <div class="container" id="header-container">
       <!-- Main navigation -->
       <nav>
         <a class="design-logo" href="./index.html">Web<span class="desing-logo-part">Studio</span></a>
@@ -25,17 +24,17 @@
           </li>
           <li><a class="links" href="./contacts.html">Contacts</a></li>
         </ul>
-        <address>
-          <ul class="contacts">
-            <li class="mail">
-              <a class="links" href=" mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="tel">
-              <a class="links" href="tel:+110001111111">+11 (000) 111-11-11</a>
-            </li>
-          </ul>
-        </address>
       </nav>
+      <address>
+        <ul class="contacts">
+          <li class="mail">
+            <a class="links" href=" mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="tel">
+            <a class="links" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
       <!-- Contacts -->
 
     </div>
@@ -87,7 +86,7 @@
     </section>
     <!--Services-->
     <!--section3-->
-    <section>
+    <section id="section3">
       <div class="container">
         <h2 class="options-title">What are we doing</h2>
         <ul class="options-list">
