--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
   <title>WebStudio</title>
   <link type="text/css" rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link type="text/css" rel="stylesheet" href="./css/styles.css" />
-  <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+
 </head>
 
 <body>
@@ -44,7 +44,7 @@
   <main>
     <section>
       <div class="container">
-        <h2 class="visually-hidden">Options panel</h2>
+        <h2 class="visually-hidden">Work Examples</h2>
         <ul class="panel-buttons">
           <li><button class="optins-button" type="button">All</button></li>
           <li><button class="optins-button" type="button">Web Site</button></li>
@@ -52,87 +52,97 @@
           <li><button class="optins-button" type="button">Design</button></li>
           <li><button class="optins-button" type="button">Marketing</button></li>
         </ul>
-      </div>
-    </section>
-    <!-- Work Examples  -->
-    <section>
-      <div class="container">
-        <h2 class="visually-hidden">Work Examples</h2>
+        <!-- Work Examples  -->
         <ul class="work-examples">
-          <li>
-            <div class="work-item"><a>
-                <img src="./images/apps.jpg" alt="Banking App Interface Concept" width="360" />
+          <li class="work-item">
+            <a>
+              <img src="./images/apps.jpg" alt="Banking App Interface Concept" width="360" />
+              <div class="work-description">
                 <h3 class="work-item-title">Banking App Interface Concept</h3>
                 <p class="work-item-sphere">App</p>
-              </a>
-            </div>
+              </div>
+            </a>
+
           </li>
-          <li>
-            <div class="work-item"><a>
-                <img src="./images/marketing.jpg" alt="Cashless Payment" width="360" />
+          <li class="work-item">
+            <a>
+              <img src="./images/marketing.jpg" alt="Cashless Payment" width="360" />
+              <div class="work-description">
                 <h3 class="work-item-title">Cashless Payment</h3>
                 <p class="work-item-sphere">Marketing</p>
-              </a>
-            </div>
+              </div>
+            </a>
+
           </li>
-          <li>
-            <div class="work-item"> <a>
-                <img src="./images/meditation.jpg" alt="Meditation App" width="360" />
+          <li class="work-item">
+            <a>
+              <img src="./images/meditation.jpg" alt="Meditation App" width="360" />
+              <div class="work-description">
                 <h3 class="work-item-title">Meditaion App</h3>
                 <p class="work-item-sphere">App</p>
-              </a>
-            </div>
+              </div>
+            </a>
+
           </li>
-          <li>
-            <div class="work-item"> <a>
-                <img src="./images/taxiservice.jpg" alt="Taxi Service" width="360" />
+          <li class="work-item">
+            <a>
+              <img src="./images/taxiservice.jpg" alt="Taxi Service" width="360" />
+              <div class="work-description">
                 <h3 class="work-item-title">Taxi Service</h3>
                 <p class="work-item-sphere">Marketing</p>
-              </a>
-            </div>
+              </div>
+            </a>
+
           </li>
-          <li>
-            <div class="work-item"><a>
-                <img src="./images/screenil.jpg" alt="Screen Illustrations" width="360" />
+          <li class="work-item">
+            <a>
+              <img src="./images/screenil.jpg" alt="Screen Illustrations" width="360" />
+              <div class="work-description">
                 <h3 class="work-item-title">Screen Illustrations</h3>
                 <p class="work-item-sphere">Design</p>
-              </a>
-            </div>
+              </div>
+            </a>
+
           </li>
-          <li>
-            <div class="work-item">
-              <a>
-                <img src="./images/onlinecourses.jpg" alt="Online Courses" width="360" />
+          <li class="work-item">
+
+            <a>
+              <img src="./images/onlinecourses.jpg" alt="Online Courses" width="360" />
+              <div class="work-description">
                 <h3 class="work-item-title">Online Courses</h3>
-                <p class="work-item-sphere">
-
-
-            </div>Marketing</p>
+                <p class="work-item-sphere">Marketing</p>
+              </div>
             </a>
           </li>
-          <li>
-            <div class="work-item"><a>
-                <img src="./images/instagram.jpg" alt="Instagram Stories Concept" width="360" />
+          <li class="work-item">
+            <a>
+              <img src="./images/instagram.jpg" alt="Instagram Stories Concept" width="360" />
+              <div class="work-description">
                 <h3 class="work-item-title">Instagram Stories Concept</h3>
                 <p class="work-item-sphere">Design</p>
-              </a>
-            </div>
+              </div>
+            </a>
+
           </li>
-          <li>
-            <div class="work-item"> <a>
-                <img src="./images/organicfood.jpg" alt="Organic Food" width="360" />
+          <li class="work-item">
+            <a>
+              <img src="./images/organicfood.jpg" alt="Organic Food" width="360" />
+              <div class="work-description">
                 <h3 class="work-item-title">Organic Food</h3>
                 <p class="work-item-sphere">Web Site</p>
-              </a>
-            </div>
+              </div>
+            </a>
+
           </li>
-          <li>
-            <div class="work-item"><a>
-                <img src="./images/freshcoffee.jpg" alt="Fresh Coffee" width="360" />
+          <li class="work-item">
+            <a>
+              <img src="./images/freshcoffee.jpg" alt="Fresh Coffee" width="360" />
+              <div class="work-description">
                 <h3 class="work-item-title">Fresh Coffee</h3>
                 <p class="work-item-sphere">Web Site</p>
-              </a>
-            </div>
+              </div>
+            </a>
+
           </li>
         </ul>
       </div>
