--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
         <a class="design-logo" href="./index.html">Web<span class="desing-logo-part">Studio</span></a>
         <ul class="main-nav-buttons">
-          <li><a class="links" href="./studio.html">Studio</a></li>
+          <li><a class="links current" href="./index.html">Studio</a></li>
           <li class="portfolio">
             <a class="links" href="./portfolio.html">Portfolio</a>
           </li>
