--- a/portfolio.html
+++ b/portfolio.html
@@ -19,9 +19,9 @@
       <nav>
         <a class="design-logo" href="./index.html">Web<span class="desing-logo-part">Studio</span></a>
         <ul class="main-nav-buttons">
-          <li><a class="links" href="./studio.html">Studio</a></li>
+          <li><a class="links" href="./index.html">Studio</a></li>
           <li class="portfolio">
-            <a class="links" href="./portfolio.html">Portfolio</a>
+            <a class="links current" href="./portfolio.html">Portfolio</a>
           </li>
           <li><a class="links" href="./contacts.html">Contacts</a></li>
         </ul>
