--- a/portfolio.html
+++ b/portfolio.html
@@ -13,29 +13,30 @@
 
 <body>
   <!--Top line-->
+  <!--Top line-->
   <header>
-    <div class="container">
+    <div class="container" id="header-container">
       <!-- Main navigation -->
       <nav>
         <a class="design-logo" href="./index.html">Web<span class="desing-logo-part">Studio</span></a>
         <ul class="main-nav-buttons">
-          <li><a class="links" href="./index.html">Studio</a></li>
+          <li><a class="links " href="./index.html">Studio</a></li>
           <li class="portfolio">
             <a class="links current" href="./portfolio.html">Portfolio</a>
           </li>
           <li><a class="links" href="./contacts.html">Contacts</a></li>
         </ul>
-        <address>
-          <ul class="contacts">
-            <li class="mail">
-              <a class="links" href=" mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="tel">
-              <a class="links" href="tel:+110001111111">+11 (000) 111-11-11</a>
-            </li>
-          </ul>
-        </address>
       </nav>
+      <address>
+        <ul class="contacts">
+          <li class="mail">
+            <a class="links" href=" mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="tel">
+            <a class="links" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
       <!-- Contacts -->
 
     </div>
