--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </section>
     <!--section2-->
-    <section>
+    <section id="section2">
       <div class="container">
         <h2 class="visually-hidden">Our Advantages</h2>
         <ul class="adv-list">
